--- a/LI_14_Movies_Surprise.ipynb
+++ b/LI_14_Movies_Surprise.ipynb
@@ -54,38 +54,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kCK4Dz9WD37b",
-        "outputId": "314fbe81-0daa-49d2-fb57-3116c5cb9e46",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "kCK4Dz9WD37b"
       },
       "source": [
         "! pip install scikit-surprise"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting scikit-surprise\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/97/37/5d334adaf5ddd65da99fc65f6507e0e4599d092ba048f4302fe8775619e8/scikit-surprise-1.1.1.tar.gz (11.8MB)\n",
-            "\u001b[K     |████████████████████████████████| 11.8MB 351kB/s \n",
-            "\u001b[?25hRequirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-surprise) (0.17.0)\n",
-            "Requirement already satisfied: numpy>=1.11.2 in /usr/local/lib/python3.6/dist-packages (from scikit-surprise) (1.18.5)\n",
-            "Requirement already satisfied: scipy>=1.0.0 in /usr/local/lib/python3.6/dist-packages (from scikit-surprise) (1.4.1)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from scikit-surprise) (1.15.0)\n",
-            "Building wheels for collected packages: scikit-surprise\n",
-            "  Building wheel for scikit-surprise (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for scikit-surprise: filename=scikit_surprise-1.1.1-cp36-cp36m-linux_x86_64.whl size=1670920 sha256=46caae234372e5abd2046772f80dda084fa1117d0c6a42cecdb780d0c9f6cb68\n",
-            "  Stored in directory: /root/.cache/pip/wheels/78/9c/3d/41b419c9d2aff5b6e2b4c0fc8d25c538202834058f9ed110d0\n",
-            "Successfully built scikit-surprise\n",
-            "Installing collected packages: scikit-surprise\n",
-            "Successfully installed scikit-surprise-1.1.1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -451,7 +426,9 @@
         "id": "wrKoEI0EDw-k"
       },
       "source": [
-        "User-based модель"
+        "User-based модель\n",
+        "\n",
+        "Проверям для всех алгоритмов в пакете с разными параметрами"
       ]
     },
     {
@@ -639,6 +616,15 @@
       ],
       "execution_count": 61,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bTFgtniW4PVO"
+      },
+      "source": [
+        "Сведем все варианты запуска в таблицу"
+      ]
     },
     {
       "cell_type": "code",
@@ -852,7 +838,8 @@
         "id": "1iqTKr5bxpP1"
       },
       "source": [
-        " 0.867976  -  наилучший вариант  для модели KNNBaseline  с параметрами 'method': 'sgd', 'learning_rate': 0.005, 'reg': 0.09"
+        "### 0.867976  -  наилучший вариант  для модели KNNBaseline \n",
+        " с параметрами 'method': 'sgd', 'learning_rate': 0.005, 'reg': 0.09"
       ]
     },
     {
